--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,26 @@
 
     <groupId>org.example</groupId>
     <artifactId>FromCSVToList</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>2.0-SNAPSHOT</version>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <name>Maven Plugin Repository</name>
+            <url>http://repo1.maven.org/maven2</url>
+        </pluginRepository>
+    </pluginRepositories>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+<dependencies>
+
+    <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.6</version>
+    </dependency>
+
+</dependencies>
 
 </project>
